--- a/public/signin.html
+++ b/public/signin.html
@@ -23,9 +23,30 @@
     <script type="text/javascript">
       // FirebaseUI config.
       var uiConfig = {
+        callbacks: {
+          signInSuccessWithAuthResult: function(authResult, redirectUrl) {
+            // User successfully signed in.
+            // Return type determines whether we continue the redirect automatically
+            // or whether we leave that to developer to handle.
+              if (authResult.credential) {
+                // This gives you a Google Access Token.
+                var token = authResult.credential.accessToken;
+                localStorage.setItem("accessToken",token);
+              }
+              
+            return true;
+          },
+        },
         signInSuccessUrl: '/',
         signInOptions: [
-          firebase.auth.GoogleAuthProvider.PROVIDER_ID// Leave the lines as is for the providers you want to offer your users.
+          // firebase.auth.GoogleAuthProvider.PROVIDER_ID
+          {
+            provider: firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+            scopes: [
+              // 'https://www.googleapis.com/auth/contacts.readonly',
+              'https://www.googleapis.com/auth/drive.file'
+            ],
+          }
         ],
         // tosUrl and privacyPolicyUrl accept either url string or a callback function.
         // Terms of service url/callback.
